--- a/etc/kbcom.net-zfs-report.conf
+++ b/etc/kbcom.net-zfs-report.conf
@@ -1,2 +1,2 @@
-# ZFS ARCSTATS log file
 export CONFIG_FILE_ARCSTATSLOG="$CONFIG_FOLDER_MAIN/var/kbcom.net-zfs-report.log"
+export CONFIG_FILE_ARCSTATS="/proc/spl/kstat/zfs/arcstats"
